Protect service API documentation
